[gd_scene load_steps=2 format=3 uid="uid://ckpm66veavaxh"]

[ext_resource type="Script" uid="uid://ccx4uqln2lu2e" path="res://Script/script_LevelChoiceMenu.gd" id="1_0co11"]

[node name="Control" type="Control"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_0co11")

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 400)
layout_mode = 0
offset_left = 64.0
offset_top = 128.0
offset_right = 464.0
offset_bottom = 528.0
theme_override_constants/separation = 4

[node name="Level_1_Button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
text = "Level 1"

[node name="BackButton" type="Button" parent="."]
custom_minimum_size = Vector2(400, 72)
layout_mode = 0
offset_left = 1456.0
offset_top = 952.0
offset_right = 1856.0
offset_bottom = 1024.0
text = "Back"

[connection signal="pressed" from="VBoxContainer/Level_1_Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
